--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -8,4 +8,4 @@ respawn
 setuid testgoat
 chdir /home/testgoat/sites/SITENAME/source
 
-exec ../virtualenv/bin/gunicorn --bind unix:/tmp/SITENAME superlists.wsgi:application
+exec ../virtualenv/bin/gunicorn --bind unix:/tmp/SITENAME.socket superlists.wsgi:application
